tests/dataset/tpc-ds/compiler/c/q38.c
// Generated by Mochi compiler v0.10.26 on 2025-07-15T06:30:40Z
// Generated by Mochi compiler v0.10.26 on 2025-07-15T06:30:40Z
#include <stdio.h>
#include <stdlib.h>
#include <string.h>

typedef struct {
  int len;
  int *data;
} list_int;
static list_int list_int_create(int len) {
  list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  double *data;
} list_float;
static list_float list_float_create(int len) {
  list_float l;
  l.len = len;
  l.data = calloc(len, sizeof(double));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  char **data;
} list_string;
static list_string list_string_create(int len) {
  list_string l;
  l.len = len;
  l.data = calloc(len, sizeof(char *));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  list_int *data;
} list_list_int;
static list_list_int list_list_int_create(int len) {
  list_list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(list_int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
static list_int concat_list_int(list_int a, list_int b) {
  list_int r = list_int_create(a.len + b.len);
  for (int i = 0; i < a.len; i++)
    r.data[i] = a.data[i];
  for (int i = 0; i < b.len; i++)
    r.data[a.len + i] = b.data[i];
  return r;
}
static void _json_int(int v) { printf("%d", v); }
static void _json_float(double v) { printf("%g", v); }
static void _json_string(char *s) { printf("\"%s\"", s); }
static void _json_list_int(list_int v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_int(v.data[i]);
  }
  printf("]");
}
static void _json_list_float(list_float v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_float(v.data[i]);
  }
  printf("]");
}
static void _json_list_string(list_string v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_string(v.data[i]);
  }
  printf("]");
}
static void _json_list_list_int(list_list_int v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_list_int(v.data[i]);
  }
  printf("]");
}
typedef struct {
  int c_customer_sk;
  const char *c_last_name;
  const char *c_first_name;
} customer_t;
typedef struct {
  int len;
  customer_t *data;
} customer_list_t;
customer_list_t create_customer_list(int len) {
  customer_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(customer_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int ss_customer_sk;
  int d_month_seq;
} store_sale_t;
typedef struct {
  int len;
  store_sale_t *data;
} store_sale_list_t;
store_sale_list_t create_store_sale_list(int len) {
  store_sale_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(store_sale_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int cs_bill_customer_sk;
  int d_month_seq;
} catalog_sale_t;
typedef struct {
  int len;
  catalog_sale_t *data;
} catalog_sale_list_t;
catalog_sale_list_t create_catalog_sale_list(int len) {
  catalog_sale_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(catalog_sale_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int ws_bill_customer_sk;
  int d_month_seq;
} web_sale_t;
typedef struct {
  int len;
  web_sale_t *data;
} web_sale_list_t;
web_sale_list_t create_web_sale_list(int len) {
  web_sale_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(web_sale_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

list_int distinct(list_int xs) {
  list_int out = list_int_create(0);
  for (int tmp1 = 0; tmp1 < xs.len; tmp1++) {
    int x = xs.data[tmp1];
    list_int tmp2 = list_int_create(0);
    if (((!contains(tmp2, x)))) {
      list_int tmp3 = list_int_create(0);
      int tmp4_data[1];
      list_int tmp4 = {1, tmp4_data};
      tmp4.data[0] = x;
      list_int tmp5 = concat_list_int(tmp3, tmp4);
      out = tmp5;
    }
  }
  list_int tmp6 = list_int_create(0);
  return tmp6;
}

static int test_TPCDS_Q38_simplified_result;
static void test_TPCDS_Q38_simplified() {
  if (!(test_TPCDS_Q38_simplified_result == 1)) {
    fprintf(stderr, "expect failed\n");
    exit(1);
  }
}

int main() {
  customer_t customer[] = {
      (customer_t){
          .c_customer_sk = 1, .c_last_name = "Smith", .c_first_name = "John"},
      (customer_t){
          .c_customer_sk = 2, .c_last_name = "Jones", .c_first_name = "Alice"}};
  int customer_len = sizeof(customer) / sizeof(customer[0]);
  store_sale_t store_sales[] = {
      (store_sale_t){.ss_customer_sk = 1, .d_month_seq = 1200},
      (store_sale_t){.ss_customer_sk = 2, .d_month_seq = 1205}};
  int store_sales_len = sizeof(store_sales) / sizeof(store_sales[0]);
  catalog_sale_t catalog_sales[] = {
      (catalog_sale_t){.cs_bill_customer_sk = 1, .d_month_seq = 1203}};
  int catalog_sales_len = sizeof(catalog_sales) / sizeof(catalog_sales[0]);
  web_sale_t web_sales[] = {
      (web_sale_t){.ws_bill_customer_sk = 1, .d_month_seq = 1206}};
  int web_sales_len = sizeof(web_sales) / sizeof(web_sales[0]);
  list_int tmp7 = list_int_create(store_sales_len);
  int tmp8 = 0;
  for (int tmp9 = 0; tmp9 < store_sales_len; tmp9++) {
    store_sale_t s = store_sales[tmp9];
    if (!(s.d_month_seq >= 1200 && s.d_month_seq <= 1211)) {
      continue;
    }
    tmp7.data[tmp8] = s.ss_customer_sk;
    tmp8++;
  }
  tmp7.len = tmp8;
  list_int store_ids = distinct(tmp7);
  list_int tmp10 = list_int_create(catalog_sales_len);
  int tmp11 = 0;
  for (int tmp12 = 0; tmp12 < catalog_sales_len; tmp12++) {
    catalog_sale_t c = catalog_sales[tmp12];
    if (!(c.d_month_seq >= 1200 && c.d_month_seq <= 1211)) {
      continue;
    }
    tmp10.data[tmp11] = c.cs_bill_customer_sk;
    tmp11++;
  }
  tmp10.len = tmp11;
  list_int catalog_ids = distinct(tmp10);
  list_int tmp13 = list_int_create(web_sales_len);
  int tmp14 = 0;
  for (int tmp15 = 0; tmp15 < web_sales_len; tmp15++) {
    web_sale_t w = web_sales[tmp15];
    if (!(w.d_month_seq >= 1200 && w.d_month_seq <= 1211)) {
      continue;
    }
    tmp13.data[tmp14] = w.ws_bill_customer_sk;
    tmp14++;
  }
  tmp13.len = tmp14;
  list_int web_ids = distinct(tmp13);
  list_int hot = store_ids intersect catalog_ids intersect web_ids;
  int result = hot.len;
  _json_int(result);
  test_TPCDS_Q38_simplified_result = result;
  test_TPCDS_Q38_simplified();
  free(tmp7.data);
  free(tmp10.data);
  free(tmp13.data);
  return 0;
}
